# Advent-of-Code

./: .gitignore  Cargo.toml  README.md
2021/: day1.asm
2023/: Cargo.toml
2023/src/: lib.rs
2024/: Cargo.toml
2024/src/: lib.rs
2025/: Cargo.toml
common/: Cargo.toml
common/src/: lib.rs
common/src/datastructs/: bidirectional_map.rs  double_ended_map.rs  graph.rs  grid.rs  mod.rs  string_grid.rs  vec2.rs  vector.rs
common/src/datatypes/: mod.rs  priority.rs  vec2.rs
common/src/generic_algorithms/: dfs.rs
common/src/io/: mod.rs
src/: main.rs  template.rs
