[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2"

members = [ "2023", "2024" , "2025", "common"]

[workspace.dependencies]
itertools = "0.13.0"
num_cpus = "1.16.0"
chrono = "0.4.38"
num-rational = "0.4.2"
good_lp = { version = "1.14.2", features = ["microlp"], default-features = false }

[dependencies]
chrono = "0.4.38"
